# sit22005

./: .gitignore  CMakeLists.txt  README.md
HolyRams/: README.md  holyrams.cpp  top_menu.h
Homework/: CMakeLists.txt
Homework/TinyBitmapMaker/: CMakeLists.txt  README.md
Homework/TinyBitmapMaker/test_suite/: CMakeLists.txt  main.cpp
Homework/TinyBitmapMaker/tinybmp_maker/: CMakeLists.txt  module.mk  tbm.cpp  tinybmp.cpp  tinybmp.h  tinybmp_def.h  tinybmp_maker.cpp  tinybmp_maker.h
Homework/TinyList/: CMakeLists.txt  README.md
Homework/TinyList/tinylist/: CMakeLists.txt  tinylist_def.h  tinymanager.cpp  tinymanager.h  tinynode.cpp  tinynode.h
Homework/TinyList/tinylist_test/: CMakeLists.txt  tinylist_test.cpp
Practicum02/: README.md
Project/: CMakeLists.txt
TinybmpMaker/: README.md
